force-app/main/default/objects/RecommendationType__c/RecommendationType__c.object-meta.xml
<CustomObject>
    <description>Object to control which fields are visible on recommendations, based on the kind of recommendation they are.</description>
    <label>Recommendation Type</label>
    <nameField>
        <label>Recommendation Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommendation Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>