force-app/main/default/objects/RecommendationType__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not this recommendation type is currently active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>