force-app/main/default/objects/RecommendationType__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>Unique reference</description>
    <externalId>true</externalId>
    <label>Developer name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>