force-app/main/default/objects/RecommendationType__c/fields/FrontPage__c.field-meta.xml
<CustomField>
    <fullName>FrontPage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this recommendation type should be displayed on the primary page of the recommendations flow</description>
    <label>Front page</label>
    <type>Checkbox</type>
</CustomField>