force-app/main/default/objects/RecommendationType__c/fields/FulfilmentRecordType__c.field-meta.xml
<CustomField>
    <fullName>FulfilmentRecordType__c</fullName>
    <description>The record type id of the fulfilment record type of the subsequent fulfilment from this recommendation</description>
    <label>Fulfilment record type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>