force-app/main/default/objects/RecommendationType__c/fields/HasDestination__c.field-meta.xml
<CustomField>
    <fullName>HasDestination__c</fullName>
    <description>Indicates whether this type of recommendations requires a destination</description>
    <label>Has destination?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>