force-app/main/default/objects/RecommendationType__c/fields/HasFrequency__c.field-meta.xml
<CustomField>
    <fullName>HasFrequency__c</fullName>
    <label>Has Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>