force-app/main/default/objects/RecommendationType__c/fields/InvestmentMandate__c.field-meta.xml
<CustomField>
    <fullName>InvestmentMandate__c</fullName>
    <description>The investment mandate of the destination after this recommendation</description>
    <label>Investment mandate</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>