force-app/main/default/objects/RecommendationType__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Specifying the recommendation type, eg &apos;Transfer&apos;</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>