force-app/main/default/objects/RecommendationType__c/fields/PaidBy__c.field-meta.xml
<CustomField>
    <fullName>PaidBy__c</fullName>
    <description>Indicates who is making the payment of these recommendations</description>
    <label>Paid by</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>