force-app/main/default/objects/RecommendationType__c/fields/ReferenceName__c.field-meta.xml
<CustomField>
    <fullName>ReferenceName__c</fullName>
    <description>Specifying the recommendation type, eg &apos;Transfer&apos;</description>
    <externalId>true</externalId>
    <label>Reference name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>