force-app/main/default/objects/RecommendationType__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>FrontPage__c</columns>
    <columns>ReferenceName__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>